--- a/Treinamento/style.css
+++ b/Treinamento/style.css
@@ -1,3 +1,14 @@
+body{
+background-color: black;
+}
+
+#cabeçalho{
+    padding: 20px;
+}
+
 .header_main{
-    font-size: 20px;
+    font-size: 50px;
+    color: blue;
+    font-weight: bold;
+    text-align: center;
 }
