--- a/Treinamento/style_main.css
+++ b/Treinamento/style_main.css
@@ -40,7 +40,7 @@ nav a:hover{
 .missao{
     width: 940px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding: 50px;
 } /* CAIXA EXTERNA QUE ENGLOBA*/
 
 .missao li{
@@ -66,7 +66,7 @@ nav a:hover{
 }/* ESPAÇAMENTO DO H2*/
 
 .missao li:hover{
-    border-color: yellow;
+    border-color: blue;
     transform: scale(1.05);
     transition: 1s all;
 }/* AO PASSAR O CURSOR, MUDA A COR DA BORDA E AUMENTA A ESCALA*/
@@ -74,15 +74,18 @@ nav a:hover{
 .missao li:active{
     border-color: red;
 }/* AO CLICAR, MUDA A BORDA PARA VERMELHA */
+/*--------------------------------------------------*/
+/* RODAPÉ */
 .rodape1{
-    margin-top: 3.3%;
+
     color: white;
     font-weight: bold;
 }
 #rodape{
     text-align: center;
     background: #5e17eb;
+    margin-top: 5.85%;
 }
 #fig2{
-    width: 20%;
+    width: 10%;
 }
