--- a/Treinamento/style_main.css
+++ b/Treinamento/style_main.css
@@ -89,3 +89,24 @@ nav a:hover{
 #fig2{
     width: 10%;
 }
+/*-------------------------------------------------*/
+/* SERVIÇOS.HTML*/
+
+.servicos{
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.servicos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+	border-radius: 10px;
+}
+.servicos img{
+    width: 100%;
+}
