--- a/Treinamento/style_main.css
+++ b/Treinamento/style_main.css
@@ -104,8 +104,9 @@ nav a:hover{
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: 2px solid #000000;
+    border: 3px solid rgb(0, 0, 0);
 	border-radius: 10px;
+    background-color: #5e17eb;
 }
 .servicos img{
     width: 100%;
